--- a/day-3-blog/views/index.ejs
+++ b/day-3-blog/views/index.ejs
@@ -4,6 +4,17 @@
     <%-include('./inc/head')%>
 </head>
 <body>
-    <h1><%=title%></h1>
+    <%-include('./inc/nav')%>
+    <section>
+        <ul>
+            <li>
+                <a href="#">Blog 1</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint consequatur commodi voluptatibus facere!
+                Sunt, vero corrupti a consectetur quibusdam eveniet,
+                cumque at culpa sint aliquam voluptates dignissimos fugiat esse labore.
+                </p>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
