--- a/day-3-blog/views/about.ejs
+++ b/day-3-blog/views/about.ejs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%=title%></title>
+    <%-include('./inc/head')%>
 </head>
-<body>
-    <h1><%=title%></h1>
+<body>  
+    <%-include('./inc/nav')%>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+     Velit sit quo ut praesentium impedit perferendis in maiores. Voluptatum, officiis numquam!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+        Velit sit quo ut praesentium impedit perferendis in maiores. Voluptatum, officiis numquam!
+    </p>
 </body>
 </html>
