--- a/day-3-blog/views/inc/head.ejs
+++ b/day-3-blog/views/inc/head.ejs
@@ -1,4 +1,5 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>HEAD || <%=title%></title>
+<link rel="stylesheet" href="/style.css">
+<title>Node JS BLOG || <%=title%></title>
